[gd_scene load_steps=4 format=3 uid="uid://ccj00txght02n"]

[ext_resource type="Script" uid="uid://ch2v4fpywrey8" path="res://scripts/campaign map/location.gd" id="1_ae4av"]
[ext_resource type="Texture2D" uid="uid://dtpa1tam2fmgh" path="res://icon.svg" id="2_jkt7n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkt7n"]

[node name="Location" type="Area2D"]
script = ExtResource("1_ae4av")
desc_text = "Placeholder text"

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_jkt7n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jkt7n")

[node name="Popup" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="Popup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.5
offset_top = -40.0
offset_right = 68.5
grow_horizontal = 2
grow_vertical = 0

[node name="Desc" type="Label" parent="Popup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Actions" type="HBoxContainer" parent="Popup/VBoxContainer"]
layout_mode = 2

[node name="Begin Level" type="Button" parent="Popup/VBoxContainer/Actions"]
layout_mode = 2
text = "Begin Level"

[node name="Exit" type="Button" parent="Popup/VBoxContainer/Actions"]
layout_mode = 2
text = "Exit
"

[node name="Image" type="TextureRect" parent="Popup"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
texture = ExtResource("2_jkt7n")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="pressed" from="Popup/VBoxContainer/Actions/Begin Level" to="." method="_on_begin_level_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/Actions/Exit" to="." method="_on_exit_pressed"]
